# sortpar

./: .travis.yml  Cargo.toml  README.md
src/: args.rs  filter.rs  integration.rs  main.rs
test_files/: fold.txt  leading_blanks.txt  reverse.txt  unique.txt
