cargo-features = ["edition"]

[package]
edition = "2018"
name = "sortpar"
version = "0.1.0"
authors = ["Garrett Squire <garrettsquire@gmail.com>"]
description = "Unix sort but in parallel"
repository = "https://github.com/gsquire/sortpar"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "gsquire/sortpar" }

[[bin]]
path = "src/main.rs"
name = "sp"

[dependencies]
caseless = "0.2"
clap = { version = "2.32", features = ["color"] }
itertools = "0.7"
lazy_static = "1.0"
natord = "1.0"
rayon = "1.0"
regex = "1.0"
version-compare = "0.0"

[dev-dependencies]
assert_cmd = "0.9"
slurp = "1.0"
tempfile = "3.0"
